[package]
name = "sdl2"
version = "0.1.0"
authors = ["jaymzee <jaymzee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf", "image", "gfx"]
