[package]
name = "la"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
ndarray = "0.15.3"
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }
